Add custom exception handling for invalid data and entity not found scenarios